// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modelUtils addElement add end complex 1 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-branch-guid",
      "new-end-element-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": null,
    "prev": "start-guid",
  },
  "branch-guid:0-branch-guid": Object {
    "childIndex": 0,
    "children": Array [
      "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
      "end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid:0-branch-guid",
    "isTerminal": true,
    "label": "branch-guid",
    "next": null,
    "parent": "branch-guid",
  },
  "branch-guid:0-branch-guid:0-branch-guid:0-end-guid": Object {
    "childIndex": 0,
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "parent": "branch-guid:0-branch-guid",
    "prev": "start-guid",
  },
  "end-guid": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "parent": "branch-guid:0-branch-guid",
    "prev": null,
  },
  "new-end-element-guid": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "new-end-element-guid",
    "isTerminal": true,
    "parent": "branch-guid",
    "prev": null,
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "parent": "root",
  },
}
`;

exports[`modelUtils addElement add end complex 2 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-branch-guid",
      "end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": null,
    "prev": "start-guid",
  },
  "branch-guid:0-branch-guid": Object {
    "childIndex": 0,
    "children": Array [
      "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
      "new-end-element-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid:0-branch-guid",
    "isTerminal": true,
    "label": "branch-guid",
    "parent": "branch-guid",
  },
  "branch-guid:0-branch-guid:0-branch-guid:0-end-guid": Object {
    "childIndex": 0,
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "parent": "branch-guid:0-branch-guid",
    "prev": "start-guid",
  },
  "end-guid": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "parent": "branch-guid",
    "prev": null,
  },
  "new-end-element-guid": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "new-end-element-guid",
    "isTerminal": true,
    "parent": "branch-guid:0-branch-guid",
    "prev": null,
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "parent": "root",
  },
}
`;

exports[`modelUtils addElement add end node to left branch of decision with empty branches 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "new-end-element-guid",
      "end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": null,
    "prev": "start-guid",
  },
  "end-guid": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "parent": "branch-guid",
    "prev": null,
  },
  "new-end-element-guid": Object {
    "childIndex": 0,
    "elementType": "END_ELEMENT",
    "guid": "new-end-element-guid",
    "isTerminal": true,
    "parent": "branch-guid",
    "prev": null,
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "parent": "root",
  },
}
`;

exports[`modelUtils addElement add end node to left branch of decision with with non-empty left branch 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-head-guid",
      "end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": null,
    "prev": "start-guid",
  },
  "branch-guid:0-head-guid": Object {
    "childIndex": 0,
    "guid": "branch-guid:0-head-guid",
    "isTerminal": true,
    "next": "new-end-element-guid",
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "parent": "branch-guid",
    "prev": null,
  },
  "new-end-element-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "new-end-element-guid",
    "prev": "branch-guid:0-head-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "parent": "root",
  },
}
`;

exports[`modelUtils addElement add end node to left branch of decision with with non-empty right branch 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "new-end-element-guid",
      "branch-guid:1-head-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": null,
    "prev": "start-guid",
  },
  "branch-guid:1-head-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:1-head-guid",
    "isTerminal": true,
    "next": "end-guid",
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "label": "end-guid",
    "prev": "branch-guid:1-head-guid",
  },
  "new-end-element-guid": Object {
    "childIndex": 0,
    "elementType": "END_ELEMENT",
    "guid": "new-end-element-guid",
    "isTerminal": true,
    "parent": "branch-guid",
    "prev": null,
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "parent": "root",
  },
}
`;

exports[`modelUtils delete element delete nested decision with end elements and reconnect 1`] = `
Object {
  "addEndElement": false,
  "state": Object {
    "branch-guid": Object {
      "children": Array [
        "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
        "branch-guid:1-end-guid",
      ],
      "defaultConnectorLabel": "Default Connector Label",
      "elementType": "branch",
      "guid": "branch-guid",
      "label": "branch-guid",
      "next": "end-guid",
      "prev": "start-guid",
    },
    "branch-guid:0-branch-guid:0-branch-guid:0-end-guid": Object {
      "childIndex": 0,
      "elementType": "END_ELEMENT",
      "guid": "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
      "isTerminal": true,
      "label": "end-guid",
      "parent": "branch-guid",
      "prev": null,
    },
    "branch-guid:1-end-guid": Object {
      "childIndex": 1,
      "elementType": "END_ELEMENT",
      "guid": "branch-guid:1-end-guid",
      "isTerminal": true,
      "label": "end-guid",
      "parent": "branch-guid",
      "prev": "start-guid",
    },
    "end-guid": Object {
      "elementType": "END_ELEMENT",
      "guid": "end-guid",
      "label": "end-guid",
      "prev": "branch-guid",
    },
    "root": Object {
      "children": Array [
        "start-guid",
      ],
      "elementType": "root",
      "guid": "root",
    },
    "start-guid": Object {
      "childIndex": 0,
      "elementType": "start",
      "guid": "start-guid",
      "isTerminal": true,
      "label": "start-guid",
      "next": "branch-guid",
      "parent": "root",
    },
  },
}
`;

exports[`modelUtils delete element delete nested decision with end elements and reconnect 2`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      null,
      "branch-guid:1-end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": "branch-guid:1-end-guid",
    "prev": "start-guid",
  },
  "branch-guid:1-end-guid": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:1-end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "parent": "branch-guid",
    "prev": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "label": "end-guid",
    "prev": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": null,
    "parent": "root",
  },
}
`;

exports[`modelUtils delete element in nested branch with ended left branch inlines 1`] = `
Object {
  "addEndElement": false,
  "state": Object {
    "branch-guid": Object {
      "children": Array [
        "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
        "end-guid",
      ],
      "defaultConnectorLabel": "Default Connector Label",
      "elementType": "branch",
      "guid": "branch-guid",
      "label": "branch-guid",
      "next": null,
      "prev": "start-guid",
    },
    "branch-guid:0-branch-guid:0-branch-guid:0-end-guid": Object {
      "childIndex": 0,
      "elementType": "END_ELEMENT",
      "guid": "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
      "isTerminal": true,
      "label": "end-guid",
      "parent": "branch-guid",
      "prev": null,
    },
    "end-guid": Object {
      "childIndex": 1,
      "elementType": "END_ELEMENT",
      "guid": "end-guid",
      "isTerminal": true,
      "label": "end-guid",
      "parent": "branch-guid",
      "prev": null,
    },
    "root": Object {
      "children": Array [
        "start-guid",
      ],
      "elementType": "root",
      "guid": "root",
    },
    "start-guid": Object {
      "childIndex": 0,
      "elementType": "start",
      "guid": "start-guid",
      "isTerminal": true,
      "label": "start-guid",
      "next": "branch-guid",
      "parent": "root",
    },
  },
}
`;

exports[`modelUtils reconnectBranchElement reconnects to an element on another branch 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-head-guid",
      "branch-guid:1-head-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": "branch-guid:1-random-guid",
    "prev": "start-guid",
  },
  "branch-guid:0-head-guid": Object {
    "childIndex": 0,
    "guid": "branch-guid:0-head-guid",
    "isTerminal": false,
    "next": null,
    "parent": "branch-guid",
  },
  "branch-guid:1-end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:1-end-guid",
    "label": "end-guid",
    "prev": "branch-guid:1-random-guid",
  },
  "branch-guid:1-head-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:1-head-guid",
    "isTerminal": false,
    "next": null,
    "parent": "branch-guid",
  },
  "branch-guid:1-random-guid": Object {
    "guid": "branch-guid:1-random-guid",
    "next": "branch-guid:1-end-guid",
    "prev": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "label": "end-guid",
    "prev": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "parent": "root",
  },
}
`;

exports[`modelUtils reconnectBranchElement reconnects to the merge element 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-head-guid",
      "branch-guid:1-head-guid",
      "branch-guid:2-head-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": "end-guid",
    "prev": "start-guid",
  },
  "branch-guid:0-head-guid": Object {
    "childIndex": 0,
    "guid": "branch-guid:0-head-guid",
    "isTerminal": false,
    "next": null,
    "parent": "branch-guid",
  },
  "branch-guid:1-head-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:1-head-guid",
    "isTerminal": false,
    "next": "branch-guid:1-random-guid",
    "parent": "branch-guid",
  },
  "branch-guid:1-random-guid": Object {
    "guid": "branch-guid:1-random-guid",
    "prev": "branch-guid:1-head-guid",
  },
  "branch-guid:2-head-guid": Object {
    "childIndex": 2,
    "guid": "branch-guid:2-head-guid",
    "isTerminal": false,
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "label": "end-guid",
    "prev": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "parent": "root",
  },
}
`;
